# weather_bot

./: .env.sample  README.md  api.py  bot.py  pyproject.toml  scripts.py
